--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -145,6 +145,7 @@ user_profile.label.ban_reason          = the ban reason:
 user_profile.label.birthday            = birthday:
 user_profile.label.comments            = Comments
 user_profile.label.last_login_time     = last login time:
+user_profile.label.position            = \ in the user ranking
 user_profile.label.profile             = Profile
 user_profile.label.rank                = rank:
 user_profile.label.rating              = karma
