--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -145,6 +145,7 @@ user_profile.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0
 user_profile.label.birthday            = \u0434\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F:
 user_profile.label.comments            = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438
 user_profile.label.last_login_time     = \u0432\u0440\u0435\u043C\u044F \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u0435\u0433\u043E \u0432\u0445\u043E\u0434\u0430:
+user_profile.label.position            = -\u0439 \u0432 \u0440\u0435\u0439\u0442\u0438\u043D\u0433\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
 user_profile.label.profile             = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
 user_profile.label.rank                = \u0440\u0430\u043D\u0433:
 user_profile.label.rating              = \u043A\u0430\u0440\u043C\u0430
