--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -145,6 +145,7 @@ user_profile.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0
 user_profile.label.birthday            = \u0434\u0430\u0442\u0430 \u043D\u0430\u0440\u043E\u0434\u0436\u0435\u043D\u043D\u044F:
 user_profile.label.comments            = \u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456
 user_profile.label.last_login_time     = \u0447\u0430\u0441 \u043E\u0441\u0442\u0430\u043D\u044C\u043E\u0433\u043E \u0432\u0445\u043E\u0434\u0443:
+user_profile.label.position            = -\u0438\u0439 \u0432 \u0440\u0435\u0439\u0442\u0438\u043D\u0433\u0443 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
 user_profile.label.profile             = \u041F\u0440\u043E\u0444\u0456\u043B\u044C
 user_profile.label.rank                = \u0440\u0430\u043D\u0433:
 user_profile.label.rating              = \u043A\u0430\u0440\u043C\u0430
