--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog.properties
@@ -151,11 +151,13 @@ user_profile.label.rank                = rank:
 user_profile.label.rating              = karma
 user_profile.label.registration_date   = registration date:
 
-users.label.ban_length    = the length of the ban in days:
-users.label.ban_reason    = the ban reason:
-users.label.have_no_users = There are no users yet, why not be the first.
-users.label.rating        = karma
-users.title               = Users
+# users.jsp
+users.label.ban_length         = the length of the ban in days:
+users.label.ban_reason         = the ban reason:
+users.label.experience_in_days = days on the site:
+users.label.have_no_users      = There are no users yet, why not be the first.
+users.label.rating             = karma
+users.title                    = Users
 
 # viewHub.jsp
 view_hub.label.have_no_articles = There are no articles yet, why not be the first.
