--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_uk.properties
@@ -151,11 +151,13 @@ user_profile.label.rank                = \u0440\u0430\u043D\u0433:
 user_profile.label.rating              = \u043A\u0430\u0440\u043C\u0430
 user_profile.label.registration_date   = \u0434\u0430\u0442\u0430 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0457:
 
-users.label.ban_length    = \u0442\u0440\u0438\u0432\u0430\u043B\u0456\u0441\u0442\u044C \u0431\u0430\u043D\u0443 \u0432 \u0434\u043D\u044F\u0445:
-users.label.ban_reason    = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
-users.label.have_no_users = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
-users.label.rating        = \u043A\u0430\u0440\u043C\u0430
-users.title               = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+# users.jsp
+users.label.ban_length         = \u0442\u0440\u0438\u0432\u0430\u043B\u0456\u0441\u0442\u044C \u0431\u0430\u043D\u0443 \u0432 \u0434\u043D\u044F\u0445:
+users.label.ban_reason         = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
+users.label.experience_in_days = \u0434\u043D\u0456\u0432 \u043D\u0430 \u0441\u0430\u0439\u0442\u0456:
+users.label.have_no_users      = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
+users.label.rating             = \u043A\u0430\u0440\u043C\u0430
+users.title                    = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 
 # viewHub.jsp
 view_hub.label.have_no_articles = \u0422\u0443\u0442 \u0449\u0435 \u043D\u0435\u043C\u0430\u0454 \u0441\u0442\u0430\u0442\u0435\u0439, \u0447\u043E\u043C\u0443 \u0431 \u043D\u0435 \u0431\u0443\u0442\u0438 \u043F\u0435\u0440\u0448\u0438\u043C.
