--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_en.properties
@@ -144,6 +144,7 @@ user_profile.label.ban_expiration_date = ban expiration date:
 user_profile.label.ban_reason          = the ban reason:
 user_profile.label.birthday            = birthday:
 user_profile.label.comments            = Comments
+user_profile.label.have_no_articles    = There are no articles yet.
 user_profile.label.last_login_time     = last login time:
 user_profile.label.position            = \ in the user ranking
 user_profile.label.profile             = Profile
