--- a/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
+++ b/jblog-view/jblog-web-view/src/main/resources/com/github/aint/jblog/web/view/i18n/jblog_ru.properties
@@ -144,6 +144,7 @@ user_profile.label.ban_expiration_date = \u0434\u0430\u0442\u0430 \u0438\u0441\u
 user_profile.label.ban_reason          = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u0431\u0430\u043D\u0443:
 user_profile.label.birthday            = \u0434\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F:
 user_profile.label.comments            = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438
+user_profile.label.have_no_articles    = \u0417\u0434\u0435\u0441\u044C \u0435\u0449\u0435 \u043D\u0435\u0442 \u0441\u0442\u0430\u0442\u0435\u0439.
 user_profile.label.last_login_time     = \u0432\u0440\u0435\u043C\u044F \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u0435\u0433\u043E \u0432\u0445\u043E\u0434\u0430:
 user_profile.label.position            = -\u0439 \u0432 \u0440\u0435\u0439\u0442\u0438\u043D\u0433\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
 user_profile.label.profile             = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
